# ColoredBorder

picturas-border-tool-ms-main/: .env  pyproject.toml
picturas-border-tool-ms-main/.github/workflows/: docker-image.yml
picturas-border-tool-ms-main/picturas_border_tool_ms/: border_request_message.py  border_result_message.py  border_tool.py  config.py  main.py  requirements.txt
picturas-border-tool-ms-main/usage_example/: docker-compose.yml
picturas-border-tool-ms-main/usage_example/request_mocker/: main.py
